fix: higher contrast blue

--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -2,7 +2,7 @@
 $darkGrey: #323232;
 $white: #f8f8ff;
 $black: #2f2f2f;
-$blue: #3366cc;
+$blue: #00abff;
 
 $backgroundDarker: #252627;
 $backgroundDark: #1e1f20;
